@@ -47,6 +47,7 @@ SRCPOD = \
 	torrus_nodeid.pod.in \
 	torrus_rrddir2xml.pod.in \
 	torrus_schedulerinfo.pod.in \
+	torrus_snmpfailures.pod.in \
 	torrus_srvderive.pod.in \
 	torrus_ttproclist.pod.in
 
@@ -73,6 +74,7 @@ POD_FILES = \
 	torrus_nodeid.pod \
 	torrus_rrddir2xml.pod \
 	torrus_schedulerinfo.pod \
+	torrus_snmpfailures.pod \
 	torrus_srvderive.pod \
 	torrus_ttproclist.pod
 
@@ -99,6 +101,7 @@ PODMAN = \
 	torrus_nodeid.@mansec_usercmd@ \
 	torrus_rrddir2xml.@mansec_usercmd@ \
 	torrus_schedulerinfo.@mansec_usercmd@ \
+	torrus_snmpfailures.@mansec_usercmd@ \
 	torrus_srvderive.@mansec_usercmd@ \
 	torrus_ttproclist.@mansec_usercmd@
 
